--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
 }
 .product {
   border: 4px solid black;
+  width: 825px;
+  margin: 50px auto;
 }
 
 .product-title {
@@ -11,6 +13,7 @@ body {
   font-size: 22px;
   text-transform: uppercase;
   background-color: #f7f7f7;
+  padding: 20px;
 }
 .price {
   font-size: 24px;
@@ -47,6 +50,7 @@ body {
   border: none;
   color: white;
   font-size: 25px;
+  width: 100%;
   text-transform: uppercases;
   cursor: pointer;
 }
