--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: sans-serif;
   line-height: 1.4;
 }
+
 .product {
   border: 4px solid black;
   width: 825px;
@@ -17,16 +22,20 @@ body {
 }
 .price {
   font-size: 24px;
+  margin-bottom: 10px;
 }
 .shp {
   font-size: 12px;
   text-transform: uppercase;
   font-weight: bold;
   color: #777;
+  margin-bottom: 10px;
 }
 .more-info:link,
 .more-info:visited {
   color: black;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .more-info:hover,
 .more-info:active {
@@ -38,11 +47,15 @@ body {
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
+  margin-bottom: 10px;
 }
 .details-lists {
   list-style: square;
+  margin-left: 20px;
 }
-
+li {
+  margin-bottom: 10px;
+}
 /* button */
 
 .add-cart {
